{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 59,
  "lineage": "965b7622-d3a1-7bc8-68db-e44490708a2e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08957f198b9bc49c3",
            "arn": "arn:aws:ec2:us-east-1:018751003213:elastic-ip/eipalloc-08957f198b9bc49c3",
            "domain": "vpc",
            "id": "eipalloc-08957f198b9bc49c3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-196-41-158.compute-1.amazonaws.com",
            "public_ip": "44.196.41.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-eip-nat-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-eip-nat-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0deb6f3b590d893c3",
            "arn": "arn:aws:ec2:us-east-1:018751003213:elastic-ip/eipalloc-0deb6f3b590d893c3",
            "domain": "vpc",
            "id": "eipalloc-0deb6f3b590d893c3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-203-19-48.compute-1.amazonaws.com",
            "public_ip": "52.203.19.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-eip-nat-b",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-eip-nat-b",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:internet-gateway/igw-00326b113e71b4897",
            "id": "igw-00326b113e71b4897",
            "owner_id": "018751003213",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-igw",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-igw",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08957f198b9bc49c3",
            "association_id": "eipassoc-0a9b09790cad65a3c",
            "connectivity_type": "public",
            "id": "nat-042bb21ebc87894ae",
            "network_interface_id": "eni-0b51ba5ddc09ed610",
            "private_ip": "10.2.1.84",
            "public_ip": "44.196.41.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08acb937d0d6d7687",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-nat-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-nat-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0deb6f3b590d893c3",
            "association_id": "eipassoc-06d886083f4e12296",
            "connectivity_type": "public",
            "id": "nat-055d2c49913060beb",
            "network_interface_id": "eni-0cf56773564b857dd",
            "private_ip": "10.2.2.117",
            "public_ip": "52.203.19.48",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-024180cf4d2f55ea5",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-nat-b",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-nat-b",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_b",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:route-table/rtb-05e7f098fa30b32b8",
            "id": "rtb-05e7f098fa30b32b8",
            "owner_id": "018751003213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-042bb21ebc87894ae",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-rt-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-rt-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:route-table/rtb-0331b91605963df88",
            "id": "rtb-0331b91605963df88",
            "owner_id": "018751003213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-055d2c49913060beb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-rt-priv-b",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-rt-priv-b",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_b",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_b",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:route-table/rtb-0c7c9d9d9f20de454",
            "id": "rtb-0c7c9d9d9f20de454",
            "owner_id": "018751003213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00326b113e71b4897",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-rt-public",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-rt-public",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9326f1eaa703f65",
            "route_table_id": "rtb-05e7f098fa30b32b8",
            "subnet_id": "subnet-04adefce744d39901"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_a",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ed82f07e1e60db0",
            "route_table_id": "rtb-0331b91605963df88",
            "subnet_id": "subnet-0239e1bde8f39f41c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_b",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_b",
            "module.vpc.aws_route_table.private_b",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090ad7af0458f8976",
            "route_table_id": "rtb-0c7c9d9d9f20de454",
            "subnet_id": "subnet-08acb937d0d6d7687"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ac2fd9cd6fd35f1",
            "route_table_id": "rtb-0c7c9d9d9f20de454",
            "subnet_id": "subnet-024180cf4d2f55ea5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "crop_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:security-group/sg-0f71815776e582cdf",
            "description": "SG crop Lambda - outbound HTTPS to S3 and SQS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS salida (S3 Gateway Endpoint y SQS)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0f71815776e582cdf",
            "ingress": [],
            "name": "image-processor-prod-sg-crop-lambda",
            "name_prefix": "",
            "owner_id": "018751003213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-sg-crop-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-sg-crop-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "upload_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:security-group/sg-0d4689ce4b653873b",
            "description": "SG upload Lambda - outbound HTTPS to S3 and SQS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS salida (S3 Gateway Endpoint y SQS)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0d4689ce4b653873b",
            "ingress": [],
            "name": "image-processor-prod-sg-upload-lambda",
            "name_prefix": "",
            "owner_id": "018751003213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-sg-upload-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-sg-upload-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:security-group/sg-031f52a1512b1329c",
            "description": "SG para el SQS Interface Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031f52a1512b1329c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS desde Lambda upload",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4689ce4b653873b",
                  "sg-0f71815776e582cdf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "image-processor-prod-sg-vpce-sqs",
            "name_prefix": "",
            "owner_id": "018751003213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-sg-vpce-sqs",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-sg-vpce-sqs",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.crop_lambda",
            "module.vpc.aws_security_group.upload_lambda",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:subnet/subnet-04adefce744d39901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04adefce744d39901",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018751003213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:subnet/subnet-0239e1bde8f39f41c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0239e1bde8f39f41c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018751003213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-priv-b",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-priv-b",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:subnet/subnet-08acb937d0d6d7687",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08acb937d0d6d7687",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "018751003213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-pub-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-pub-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:subnet/subnet-024180cf4d2f55ea5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024180cf4d2f55ea5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "018751003213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-pub-b",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-pub-b",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:vpc/vpc-07382680e24e4607e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0bf4d621ddd17306a",
            "default_route_table_id": "rtb-00451dce36dc5926f",
            "default_security_group_id": "sg-09a6dda08ce390b03",
            "dhcp_options_id": "dopt-070d0ce1c9f89a1fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07382680e24e4607e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00451dce36dc5926f",
            "owner_id": "018751003213",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-vpc",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-vpc",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:vpc-endpoint/vpce-0df01bf93ffd03a93",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0df01bf93ffd03a93",
            "ip_address_type": "ipv4",
            "owner_id": "018751003213",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:GetObject\",\"s3:PutObject\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"arn:aws:s3:::image-processor-prod-images-001/*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0331b91605963df88",
              "rtb-05e7f098fa30b32b8",
              "rtb-0c7c9d9d9f20de454"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-vpce-s3",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-vpce-s3",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_eip.nat_b",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_a",
            "module.vpc.aws_nat_gateway.nat_b",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_b",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:vpc-endpoint/vpce-06cd7340a35c12f88",
            "dns_entry": [
              {
                "dns_name": "vpce-06cd7340a35c12f88-ucpp28ml.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06cd7340a35c12f88-ucpp28ml-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06cd7340a35c12f88-ucpp28ml-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02085672DS8S8T6EU9SR"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z02085663TZE1M0XA7ACN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06cd7340a35c12f88",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-074d27f1305a04787",
              "eni-0a3429570f218d18e"
            ],
            "owner_id": "018751003213",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-031f52a1512b1329c"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.2.11.186",
                "subnet_id": "subnet-04adefce744d39901"
              },
              {
                "ipv4": "10.2.12.229",
                "subnet_id": "subnet-0239e1bde8f39f41c"
              }
            ],
            "subnet_ids": [
              "subnet-0239e1bde8f39f41c",
              "subnet-04adefce744d39901"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-vpce-sqs",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-vpce-sqs",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07382680e24e4607e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.crop_lambda",
            "module.vpc.aws_security_group.upload_lambda",
            "module.vpc.aws_security_group.vpce_sqs",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}